Fixed a minor visual bug where pac container was misaligned with search-div

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,7 +43,7 @@ html, body {
     margin-top: -38.5px;
     padding-top: 45px;
     position: fixed !important;
-    width: 260px !important;
+    width: 220px !important;
     z-index: 0;
   }
 
